--- a/assets/css/_grid-button.scss
+++ b/assets/css/_grid-button.scss
@@ -60,8 +60,6 @@
   display: inline-block;
   flex: 1 0 0;
   font-weight: $font-weight-medium;
-  height: 2.625rem;
-  min-width: max-content;
 
   &:hover {
     text-decoration: none;
